# dynamic_introspection

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
include/dynamic_introspection/: DynamicIntrospection.h  DynamicIntrospectionUtils.h  dynamic_introspection.h  dynamic_introspection_utils.h  introspection_online_utils.h
matlab/: debug_zmp_com_discretization.m  debug_zmp_discretization.m  dipsplay_variable_names.m  display_contact_forces.m  get_introspection_varible_index.m  pathdef.m  plot_cop.m  plot_floating_base.m  plot_torques.m  read_introspection_bag.m  read_introspection_variable.m
matlab/estimation/: reemc_estimation.m
msg/: IntrospectionMsg.msg
scripts/: bag_introspection_bag_read_multiplot.py
singleton_tests/: CMakeLists.txt
src/: DynamicIntrospection.cpp  DynamicIntrospectionUtils.cpp  IntrospectionBagAnalyzer.cpp  dynamic_introspection.cpp  dynamic_introspection_utils.cpp  introspection_online_utils.cpp
test/: CMakeLists.txt  DynamicIntrospectionBagExample.cpp  DynamicIntrospectionExample.cpp  testClassA.cpp  testClassA.h  testClassAbstract.h  testClassB.cpp  testClassB.h  testClassMain.cpp  testClassPluginMain.cpp  testClassPlugins.cpp
