<?xml version="1.0"?>
<package>
  <name>dynamic_introspection</name>
  <version>0.0.1</version>
  <description>The dynamic_introspection package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>

  <export>
  </export>
  
</package>
