<?xml version="1.0"?>
<package>
  <name>dynamic_introspection</name>
  <version>0.0.2</version>
  <description>The dynamic_introspection package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tomé</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
     <dynamic_introspection plugin="${prefix}/test/testPlugins.xml" />
  </export>
  
</package>
